<resources>
    <string name="app_name">찬누리</string>

    <string name="title_activity_self_diagnosis">자가 진단하기</string>
    <string name="title_activity_self_diagnosis_result">결과 확인</string>
    <string name="title_activity_health_info">건강 정보</string>
    <string name="title_activity_disease_info_select">질병 정보</string>
    <string name="title_activity_game">건강 게임</string>
    <string name="title_activity_mypage">마이페이지</string>
    <string name="title_activity_init">초기화하기</string>
    <string name="title_activity_app_description">찬누리 설명</string>
    <string name="title_activity_edit_disease">질병 수정하기</string>
    <string name="title_activity_edit_userinfo">회원 정보 수정하기</string>

    <string name="btn_text_main_self_diagnosis">자가진단</string>
    <string name="btn_text_main_health_info">건강정보</string>
    <string name="btn_text_main_disease_info">질병정보</string>
    <string name="btn_text_main_game">건강게임</string>

    <string name="health_info_tab_text_1">정보 검색</string>
    <string name="health_info_tab_text_2">영상</string>

    <string name="disease_info_tab_text_1">정의</string>
    <string name="disease_info_tab_text_2">원인</string>
    <string name="disease_info_tab_text_3">증상</string>
    <string name="disease_info_tab_text_4">치료</string>
    <string name="disease_info_tab_text_5">주의사항</string>

    <!--튜토리얼 질문-->
    <string name="tutorial_step_1">이름을\n알려주세요.</string>
    <string name="tutorial_step_2">성별을\n선택해 주세요.</string>
    <string name="tutorial_step_3">출생년도가\n언제인가요?</string>
    <string name="tutorial_step_4">관련 있는 병이 있다면\n선택해 주세요.</string>
    <string name="tutorial_btn">다음으로</string>

    <string name="complete_btn">완료</string>
    <string name="edit_btn">변경하기</string>

    <string name="woman">여자</string>
    <string name="man">남자</string>

    <string name="greeting">찬누리 가입을 환영합니다</string>

    <string name="dialog_btn_positive">초기화하기</string>
    <string name="dialog_btn_negative">취소</string>
    <string name="dialog_title_game_reset">게임 기록을 초기화하시겠습니까?</string>
    <string name="dialog_message_game_reset">남아있는 게임 기록 데이터가 모두 삭제되고 다시 복구할 수 없습니다. 정말 초기화하시겠습니까?</string>
    <string name="dialog_title_self_diagnosis_reset">자가진단 기록을 초기화하시겠습니까?</string>
    <string name="dialog_message_self_diagnosis_reset">남아있는 자가진단 결과 데이터가 모두 삭제되고 다시 복구할 수 없습니다. 정말 초기화하시겠습니까?</string>
    <string name="dialog_title_account_reset">계정을 초기화하시겠습니까?</string>
    <string name="dialog_message_account_reset">입력하신 사용자 정보가 모두 삭제되고 다시 복구할 수 없습니다. 삭제가 완료되면 어플 초기 화면으로 돌아갑니다. 정말 초기화하시겠습니까?</string>

    <string name="health_safe">건강</string>
    <string name="health_warning">주의</string>
    <string name="health_danger">위험</string>

    <!--자가진단-->
    <string name="self_diagnosis_explain">스스로 건강상태를 진단해 보세요.\n보다 정확한 진단은 전문가와의 상담 후에 진행하시길 바랍니다.</string>
    <string name="self_diagnosis_chkResult">결과 확인</string>
    <string name="self_diagnosis_resultByDate">날짜순</string>
    <string name="self_diagnosis_resultBySymptom">질병별</string>
    <string name="self_diagnosis_answer_yes">네</string>
    <string name="self_diagnosis_answer_no">아니오</string>
    <string name="self_diagnosis_save">저장</string>
    <string name="self_diagnosis_finish">종료</string>

    <!--게임-->
    <string name="game_main_explain">건강게임은 집중력, 계산력, 기억력을 키워주고, 치매를 예방해요. \n마음에 드는 게임을 선택하고 시작해 볼까요?</string>
    <string name="game_main_game1">하나빼기</string>
    <string name="game_main_game2">간단 연산</string>
    <string name="game_main_game3">카드 뒤집기</string>
    <string name="game_main_lv1">쉬움</string>
    <string name="game_main_lv2">중간</string>
    <string name="game_main_lv3">어려움</string>
    <string name="game_main_start">게임 시작</string>

    <string name="game_difficulty">난이도</string>
    <string name="game_leftAttempts">남은 횟수</string>

    <string name="game_result">게임 결과</string>
    <string name="game_result_bestScore">최고 기록: </string>
    <string name="game_result_restart">다시하기</string>
    <string name="game_result_unit">점</string>
</resources>