<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp"
    tools:context=".mypage.EditUserInfoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="이름"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/defaultTextColor"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="이름 입력"
                app:counterEnabled="true"
                app:counterMaxLength="5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="성별"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/defaultTextColor"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/manBtn"
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/btn_gender"
                        android:padding="25dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_person_man" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/man"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@color/midLightTextColor"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/womanBtn"
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/btn_gender"
                        android:padding="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_person_woman" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        android:textColor="@color/midLightTextColor"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="나이"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/defaultTextColor"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearTextInputLayout"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="년도 입력">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    
    <Button
        android:id="@+id/completeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/cbtn_text"
        android:text="@string/edit_btn"
        android:enabled="false" />
</LinearLayout>